# Axiom

./: .dockerignore  .env.example  Dockerfile  README.md  agent.py  app.py  chainlit.md  docs_config.yaml  prompts.py  pyproject.toml
.chainlit/: config.toml
.github/: README.md
.huggingface/: README.md
public/: theme.json
src/axiom/: app.py  prompts.py
