[project]
name = "docs-agent-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.4.201",
    "langchain-core>=0.3.47",
    "langchain-google-genai>=2.1.0",
    "langchain-mcp-adapters>=0.0.5",
    "langgraph>=0.3.18",
    "mcpdoc>=0.0.4",
    "python-dotenv>=1.0.1",
    "websockets>=15.0.1",
]
